    reported by Robert Elz).

    Check more carefully for unlikely integer overflows, preferring
    C23 <stdckdint.h> to overflow checking by hand, as the latter has
    had obscure bugs.

  Changes to build procedure

    New Makefile rule check_mild that skips checking whether Link
    lines are in the file 'backward'.  (Inspired by a suggestion from
    Stephen Colebourne.)


Release 2022f - 2022-10-28 18:04:57 -0700

  Briefly:
    Mexico will no longer observe DST except near the US border.
    Chihuahua moves to year-round -06 on 2022-10-30.
    Fiji no longer observes DST.
    Move links to 'backward'.
    In vanguard form, GMT is now a Zone and Etc/GMT a link.
    zic now supports links to links, and vanguard form uses this.
    Simplify four Ontario zones.
    Fix a Y2438 bug when reading TZif data.
    Enable 64-bit time_t on 32-bit glibc platforms.
    Omit large-file support when no longer needed.
    In C code, use some C23 features if available.
    Remove no-longer-needed workaround for Qt bug 53071.

  Changes to future timestamps

    Mexico will no longer observe DST after 2022, except for areas
    near the US border that continue to observe US DST rules.
    On 2022-10-30 at 02:00 the Mexican state of Chihuahua moves
    from -07 (-06 with DST) to year-round -06, thus not changing
    its clocks that day.  The new law states that Chihuahua
    near the US border no longer observes US DST.
    (Thanks to gera for the heads-up about Chihuahua.)

    Fiji will not observe DST in 2022/3.  (Thanks to Shalvin Narayan.)
    For now, assume DST is suspended indefinitely.

  Changes to data

    Move links to 'backward' to ease and simplify link maintenance.
    This affects generated data only if you use 'make BACKWARD='.

    GMT is now a Zone and Etc/GMT a link instead of vice versa,
    as GMT is needed for leap second support whereas Etc/GMT is not.
    However, this change exposes a bug in TZUpdater 2.3.2 so it is